--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,11 @@ coverage/
 **/ios/.symlinks/
 **/ios/Flutter/Flutter.framework
 **/ios/Flutter/Flutter.podspec
+**/ios/Flutter/App.framework
+**/ios/Flutter/Generated.xcconfig
+**/ios/Flutter/ephemeral/
+**/ios/Flutter/flutter_assets/
+**/ios/**/xcuserdata
+**/ios/**/DerivedData/
 
 pubspec.lock
